# d6web

./: .gitignore  pelicanconf.py  publishconf.py  pyproject.toml
content/: first.md  home.md
content/pages/: about.md
src/: Makefile  tasks.py
