[tool.poetry]
name = "d6web"
version = "0.1.0"
description = "D6Web"
authors = ["Chuck Mo <chuck@moosejudge.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.0"
Markdown = "^3.1"
invoke = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
